chore: Fix menu padding on iphone x

--- a/themes/cactus/source/css/_partial/post/actions_mobile.styl
+++ b/themes/cactus/source/css/_partial/post/actions_mobile.styl
@@ -49,7 +49,7 @@
   #actions-footer
     overflow: auto
     margin-top: 1rem
-    margin-bottom: 1rem
+    padding-bottom: calc(1rem + 0.8rem);
     padding-right: 1rem
     padding-left: 1rem
     width: 100%
